force-app/main/default/objects/Visit_Report__c/Visit_Report__c.object-meta.xml
<CustomObject>
    <description>営業訪問報告を管理するオブジェクト / 营业访问报告管理对象</description>
    <label>Visit Report</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>