force-app/main/default/objects/Visit_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>関連取引先 / 关联客户</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Reports</relationshipLabel>
    <relationshipName>Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>