force-app/main/default/objects/Visit_Report__c/fields/AI_Analysis__c.field-meta.xml
<CustomField>
    <fullName>AI_Analysis__c</fullName>
    <description>AI分析結果（JSON形式） / AI分析结果JSON</description>
    <label>AI Analysis</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>