force-app/main/default/objects/Visit_Report__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>会社名（AI抽出） / 公司名称（AI提取）</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>