force-app/main/default/objects/Visit_Report__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>担当者名（AI抽出） / 联系人姓名（AI提取）</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>