force-app/main/default/objects/Visit_Report__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <description>担当者役職（AI抽出） / 联系人职位（AI提取）</description>
    <label>Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>