force-app/main/default/objects/Visit_Report__c/fields/Customer_Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pain_Points__c</fullName>
    <description>Customer pain points and challenges identified during the meeting</description>
    <label>Customer Pain Points</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>