force-app/main/default/objects/Visit_Report__c/fields/Discussion_Summary__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Summary__c</fullName>
    <description>商談内容の要約 / 讨论摘要</description>
    <label>Discussion Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>