force-app/main/default/objects/Visit_Report__c/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>Customer engagement score (1-10) based on AI analysis</description>
    <label>Engagement Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>