force-app/main/default/objects/Visit_Report__c/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <description>予想成約日 / 预计成交日期</description>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>