force-app/main/default/objects/Visit_Report__c/fields/Meeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Type__c</fullName>
    <description>Type of meeting</description>
    <label>Meeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>visit</fullName>
                <label>Customer Visit</label>
            </value>
            <value>
                <fullName>phone</fullName>
                <label>Phone Call</label>
            </value>
            <value>
                <fullName>video</fullName>
                <label>Video Conference</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>