force-app/main/default/objects/Visit_Report__c/fields/Next_Actions__c.field-meta.xml
<CustomField>
    <fullName>Next_Actions__c</fullName>
    <description>次のアクション / 后续行动</description>
    <label>Next Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>