force-app/main/default/objects/Visit_Report__c/fields/Raw_Input__c.field-meta.xml
<CustomField>
    <fullName>Raw_Input__c</fullName>
    <description>元の入力テキスト / 原始输入文本</description>
    <label>Raw Input</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>