force-app/main/default/objects/Visit_Report__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <description>Risks and concerns identified during the meeting</description>
    <label>Risks</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>