force-app/main/default/objects/Visit_Report__c/fields/Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Sentiment__c</fullName>
    <description>Customer sentiment during the meeting</description>
    <label>Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>positive</fullName>
                <label>Positive</label>
            </value>
            <value>
                <fullName>neutral</fullName>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>negative</fullName>
                <label>Negative</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>