force-app/main/default/objects/Visit_Report__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>AI-generated summary of the meeting</description>
    <label>Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>