force-app/main/default/objects/Visit_Report__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <description>Full transcript of the meeting recording</description>
    <label>Transcript</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>