force-app/main/default/objects/Visit_Report__c/fields/Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date__c</fullName>
    <description>訪問日 / 访问日期</description>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>