force-app/main/default/objects/Visit_Report__c/fields/Visit_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Visit_Purpose__c</fullName>
    <description>訪問目的 / 访问目的</description>
    <label>Visit Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>